Fixed color contrast

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -14,7 +14,7 @@ $main-background: var(--color-background-main);
 
 :root {
 	--color-accent: 236, 64, 122;
-	--color-accent-text: white;
+	--color-accent-text: black;
 	--color-background-body: #ECEFF1;
 	--color-background-main: white;
 }
